
Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Allow searching reporting records by name

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow creating manual commission
* Include commission to stock margin report

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow creating commission invoices for specific agents
* Add reporting

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Use the invoice date or payment date for commission date

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add with agent option to credit invoice
* Add employee on agent selection

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add Agent selection

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
--------------------------
* Bug fixes (see mercurial logs for details)

Version 5.0.0 - 2018-10-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
--------------------------
* Bug fixes (see mercurial logs for details)
* Check pending commission to erase party
* Match also with parent categories

Version 4.6.0 - 2017-10-30