@@ -1,3 +1,4 @@
+* Allow agent to be deactivated
 
 Version 7.2.0 - 2024-04-29
 --------------------------
